# physical-ai-book

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docusaurus.config.ts  package-lock.json  package.json  pyproject.toml  sidebars.ts  spec-driven.md
docs/: intro.md
docs-plus/01a_ai_cli/01_big_free_tiers/02_qwen_code/01_hello_qwen/: .gitignore  README.md  main.py  pyproject.toml
docs-plus/01a_ai_cli/01_big_free_tiers/02_qwen_code/01_hello_qwen/prompts/: 0001-init-project.prompt.md  0002-review-and-write-tests.prompt.md
docs-plus/01a_ai_cli/01_big_free_tiers/02_qwen_code/01_hello_qwen/tests/: test_main.py
docs-plus/08_applied_evals/01_quickstart/: README.md  pyproject.toml
docs-plus/08_applied_evals/01_quickstart/01_baseline_trace/: README.md  main.py
docs-plus/08_applied_evals/01_quickstart/02_objective_reflection_sql/: README.md  run_eval.py
docs-plus/08_applied_evals/01_quickstart/02_objective_reflection_sql/data/: sql_eval.jsonl
docs-plus/08_applied_evals/01_quickstart/03_subjective_rubric_llm_judge/: README.md  evaluate.py
docs-plus/08_applied_evals/01_quickstart/04_error_analysis/: README.md  analyze_errors.py
docs-plus/08_applied_evals/01_quickstart/05_component_eval_search_quality/: README.md  eval_search.py  preferred_domains.yml
docs-plus/08_applied_evals/01_quickstart/06_cost_latency_benchmark/: README.md  bench.py
docs-plus/08_applied_evals/01_quickstart/07_ab_harness/: README.md  run_ab.py
docs-plus/08_applied_evals/01_quickstart/08_capstone/: README.md
docs-plus/08_applied_evals/01_quickstart/shared/: config.py
(+187 files in other folders)
